# onnx-extractor

./: Cargo.toml  README.md
proto/: onnx.proto
src/: external_data.rs  lib.rs  model.rs  operation.rs  proto_adapter.rs  tensor.rs
tests/: integration.rs
