[package]
name = "onnx-extractor"
version = "0.3.6"
edition = "2024"
authors = ["PieInOblivion"]
license = "MIT"
description = "Lightweight ONNX model parser for extracting tensor shapes, operations, and data"
repository = "https://github.com/void-research/onnx-extractor"
keywords = ["onnx", "machine-learning", "tensor", "parser", "model"]
categories = ["parsing", "science"]
readme = "README.md"
exclude = [
	"tests/**",
	".gitignore",
]

[dependencies]
memmap2 = "0.9"
prost = "0.14"

[build-dependencies]
prost-build = "0.14"